Bug 343709 - Window role match never applies
Summary: Window role match never applies
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: rules (other bugs)
Version First Reported In: 5.2.0.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://git.reviewboard.kde.org/r/122...
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-02 20:58 UTC by Freek de Kruijf
Modified: 2015-02-05 21:18 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:
thomas.luebking: ReviewRequest+


Attachments
.config/kwinrulesrc (633 bytes, text/plain)
2015-02-02 22:17 UTC, Freek de Kruijf
Details
kontact.props (29.71 KB, text/plain)
2015-02-02 22:21 UTC, Freek de Kruijf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Freek de Kruijf 2015-02-02 20:58:45 UTC
After right clicking on that task bar of Kontact I get a context menu in which i select More Actions.
In the submenu I select Special Window settings. In the popup dialog I select the tab Size & Position. Before this I positioned and sized the Kontakt window to my liking. In that case the values for Size and Position are what I want them to be. So I check both Position and Size, the two top selection items on that tab. I also select Force in the pull down menu on these lines. In KDE 4.14.3 after starting Kontakt the window of Kontakt comes up on the desired location and in the desired size. However using Plasma 5, the window only seems to obeys the size setting but not the setting of the position. In KDE 4.14.3 I only have the minimize and close icons top right on the task bar. In Plasma 5.2 I still have the three icons there; also the resize icon is present.

Reproducible: Always
Comment 1 Thomas Lübking 2015-02-02 21:27:04 UTC
please attach 
a) your ~/.config/kwinrulesrc
b) the output of "xprop > kontatct.props" (the cursor will turn into a '+' shape, then please click the targetted contact window)
Comment 2 Freek de Kruijf 2015-02-02 22:17:58 UTC
Created attachment 90878 [details]
.config/kwinrulesrc
Comment 3 Freek de Kruijf 2015-02-02 22:21:11 UTC
Created attachment 90881 [details]
kontact.props

This completes the requested information
Comment 4 Thomas Lübking 2015-02-02 23:08:31 UTC
The rule's ok.
The size is simply restored from the last instance (by the client)

The rule does not apply because the role match fails
As a workaround, you can set it to "unimportant" in the first tab (eg. run "kcmshell5 kwinrules" for a global rule dialog)
Comment 5 Thomas Lübking 2015-02-02 23:31:17 UTC
culprit is
commit f1f6d6eea88113513bcd1fcf55616e9bbde19b2d

passing on the KWindowInfo role killed the lowercasing of the internal window role.

Three options:
--------------------
1. make role matching case sensitive
2. lowercase the role everytime it's fetched (suboptimal, though STRING it's at least interpreted as utf-8 in the rules -> ::windowRole() { return QString::fromUtf8(info->windowRole()).toLower().toLatin1(); } ??
3. re-cache the lowercased windowRole (as are the class)
Comment 6 Martin Flöser 2015-02-03 07:03:16 UTC
I think option 1 makes most sense.
Comment 7 F1nny 2015-02-03 21:47:23 UTC
I'm experiencing the same, usually use window rules to specify the Virtual Desktop and Position of Kontact (etc) on startup but since switching to Plasma 5.2 have not been able to get it to work. I used the detect window properties and selected the window to set everything so if it's a case of being case-sensitive that probably needs that part fixed in the detection or for it to ignore case sensitively? I believe that's what you mean? I used apply initially in the window rules for position and desktop, however upon reading the above I checked the window rule and it was showing the class and role as all lowercase while xprop has it different (mainwindow#1 was auto-filled by detect window properties yet xprop shows MainWindow#1 and class being kontact kontact instead of (in xprop) kontact Kontact). Hopefully fixing those manually will fix the rule, will find out shortly but in either case probably needs fixing in the detect window properties function of Window Rules?
Comment 8 F1nny 2015-02-03 21:53:12 UTC
What's odd is manually changing the role and class to the case-sensitive match from xprop (MainWindow#1 and kontact Kontact) then hitting OK, then apply (in the Window Rules box), and going back into Modify shows the changes stayed, however once hitting OK out of the Window Rules kcm and re-opening, everything is set to lowercase again? For some reason the Window Rules KCM seems to be overriding it all to lowercase thus preventing an exact match if I understand correctly? Thanks!
Comment 9 Thomas Lübking 2015-02-03 22:13:02 UTC
The rule is lowercased on read (in kcm and kwin) - there's no way to fix this by hand.

You'll have to either
- apply the patch downstream
- wait for the fixing release
- set the window role to irrelevant
to have this work, sorry :-(
Comment 10 Freek de Kruijf 2015-02-04 10:22:34 UTC
Will wait for the fixing release. I only use Plasma5 for testing whether I can do my regular work on that platform or not. If not I report a bug.
Comment 11 F1nny 2015-02-04 22:55:17 UTC
Thanks for the clarification Thomas! Wasn't sure if it was confirmed as a bug set for a fix or not but that answers my question :) I just set to unimportant for the role and that works fine in the interim, thanks for your guys' great work!
Comment 12 Thomas Lübking 2015-02-05 20:57:42 UTC
Git commit 4f7edb8d74675936e9b970c33e9576f571f84f7e by Thomas Lübking.
Committed on 03/02/2015 at 15:35.
Pushed by luebking into branch 'Plasma/5.2'.

Rules: make WindowRole matching case sensitive

required by KWindowInfo forwarding
FIXED-IN: 5.2.1
REVIEW: 122407

M  +1    -1    rules.cpp

http://commits.kde.org/kwin/4f7edb8d74675936e9b970c33e9576f571f84f7e
Comment 13 Thomas Lübking 2015-02-05 21:18:55 UTC
Git commit d5f126f0c8b3f02a2faebf15e6ee6cf4fa1e6294 by Thomas Lübking.
Committed on 03/02/2015 at 15:35.
Pushed by luebking into branch 'master'.

Rules: make WindowRole matching case sensitive

required by KWindowInfo forwarding
FIXED-IN: 5.2.1
REVIEW: 122407

M  +1    -1    rules.cpp

http://commits.kde.org/kwin/d5f126f0c8b3f02a2faebf15e6ee6cf4fa1e6294